# SimpleEngine

./: CMakeLists.txt
SimpleEngineCore/: CMakeLists.txt
SimpleEngineCore/includes/SimpleEngineCore/: Application.hpp  Event.hpp  Log.hpp
SimpleEngineCore/src/SimpleEngineCore/: Application.cpp  Window.cpp  Window.hpp
SimpleEngineCore/src/SimpleEngineCore/Utils/: test.cpp
SimpleEngineEditor/: CMakeLists.txt
SimpleEngineEditor/src/: main.cpp
